Phase 4 - added admin restriction over email to avoid LLM email digestion getting unrestricted use
